--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,13 @@ name: ChunkEraser
 version: '${project.version}'
 main: me.olios.plugins.chunkeraser.ChunkEraser
 api-version: 1.20
+
+commands:
+  chunk:
+    description: the main command for the ChunkEraser Plugin!
+    usage: /<command>
+    permission: ChunkEraser.admin
+
+permissions:
+  ChunkEraser.admin:
+    default: op
