reformat config.yml add BossBarHandler.kt for bossbar stuff add PluginManager.kt as an object for accessing ChunkHandler.kt, BossBarHandler.kt and TimerTask.kt add commands in ChunkCommand.kt for debugging purpose.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,5 +1,10 @@
 # Configuration File
 
-enabled: true
-timer: 600 # Time in seconds
-bossbarMessage: "<red>Next chunk deletion in <timer> seconds!"
+xGeneral:
+  enabled: false
+  timer: 10 # Time in seconds
+
+BossBar:
+  message: "<timer> seconds are left"
+  color: BLUE
+  style: SOLID
