add ActionBarHandler.kt for sending action to the players if enabled in the config.yml change the BossBarHandler.kt to use timer as parameter for more simplicity

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -17,7 +17,7 @@ BossBar:
 
 ActionBar:
   enabled: false # Toggle the action bar on or off
-  message: "Chunks being erased in <timer> seconds!"
+  message: "<blue>Chunks being erased in <gold><timer></gold> seconds!</blue>"
 
 
 Messages:
