--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -27,6 +27,8 @@ Messages:
 Sound:
   enabled: true # Toggle the sound notifications on or off
   soundType: "ENTITY_ENDER_DRAGON_GROWL" # The type of sound to play
+  volume: 10.0 # the sounds volume
+  pitch: 1.0 # the sounds pitch
   allPlayers: false # If true, plays sound for all players; otherwise, just for the player where the chunk is erased
 
 Logging:
