--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,14 +1,13 @@
 name: ChunkEraser
+author: olios
 version: '${project.version}'
 main: me.olios.plugins.chunkeraser.ChunkEraser
 api-version: 1.20
-
 commands:
   chunk:
     description: the main command for the ChunkEraser Plugin!
     usage: /<command>
     permission: ChunkEraser.admin
-
 permissions:
   ChunkEraser.admin:
     default: op
